--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "awaiter",
-	"version": "0.0.1",
+	"version": "1.0.0",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && npm run package",
@@ -16,7 +16,7 @@
 	"exports": {
 		".": {
 			"types": "./dist/index.d.ts",
-			"svelte": "./dist/index.js"
+			"default": "./dist/index.js"
 		}
 	},
 	"files": [
@@ -47,7 +47,7 @@
 		"typescript-eslint": "^8.0.0",
 		"vite": "^5.0.11"
 	},
-	"svelte": "./dist/index.js",
+	"default": "./dist/index.js",
 	"types": "./dist/index.d.ts",
 	"type": "module"
 }
